api: Add API offloading through celery (#3632)
Fix #14629

--- a/bin/conf/trytond.conf
+++ b/bin/conf/trytond.conf
@@ -233,6 +233,26 @@ unoconv = True
 # (report_engine) export_root_dir: The place in which generated documents will
 # be exported if configured so
 
+#######
+# API #
+#######
+[api]
+# (api) offload: If True, API calls will be offloaded to celery. This can be
+# useful to leverage multi-core servers for CPU-demanding APIs (simulate...)
+# default: False
+offload = True
+
+# (api) offload_database: If set, will be used to force a separate database for
+# offload calls. This can be useful when offload infrastructure is separated
+# from the actual Coog server
+# default: not set
+
+# (api) offload_timeout: If set, will be used to raise an error if the offload
+# call exceeds this timeout. Can be useful in a development environment in
+# order to detect that celery is not started
+# default: not set
+offload_timeout = 30
+
 ##########
 # Sentry #
 ##########
