commission_insurance: Per contract commission rate (#3398)
Fix #13324

--- a/modules/commission_insurance/tryton.cfg
+++ b/modules/commission_insurance/tryton.cfg
@@ -19,12 +19,14 @@ extras_depend:
     report_engine_flow
     contract_process
     contract_term_renewal
+    endorsement
 xml:
     icons.xml
     commission.xml
     contract.xml
     party.xml
     payment.xml
+    rule_engine.xml
     account.xml
     invoice.xml
     event_type.xml
