--- a/modules/contract_noemie/tryton.cfg
+++ b/modules/contract_noemie/tryton.cfg
@@ -7,6 +7,7 @@ depends:
     contract_insurance_health_fr
 extras_depend:
 	endorsement_insurance
+    contract_term_renewal
 xml:
     contract.xml
     offered.xml
